WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
322944
[AppKit Gestures] WKMouseTrackingGestureRecognizer should not be exposed using @objc
https://bugs.webkit.org/show_bug.cgi?id=322944
Summary
[AppKit Gestures] WKMouseTrackingGestureRecognizer should not be exposed usin...
Abrar Rahman Protyasha
Reported
2026-08-30 14:20:23 PDT
Post-landing feedback on
319879@main
, c.f.
https://github.com/WebKit/WebKit/pull/72471#discussion_r3864804278
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-08-30 14:20:31 PDT
<
rdar://problem/186216383
>
Abrar Rahman Protyasha
Comment 2
2026-08-30 14:32:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/72807
EWS
Comment 3
2026-08-30 18:00:05 PDT
Committed
320126@main
(6044c47010e2): <
https://commits.webkit.org/320126@main
> Reviewed commits have been landed. Closing PR #72807 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug