[AppKit Gestures] WKMouseTrackingGestureRecognizer should not be exposed using @objc https://bugs.webkit.org/show_bug.cgi?id=322944 rdar://186216383

Reviewed by Richard Robinson.

This patch is a follow-up to 319879@main.

Exposing a Swift class to Objective-C by annotating the class with @objc
is not properly supported. Instead, in this patch, we go with the
supported direction, which is to declare the class in a header and
implement in Swift with @objc @implementation.

No new tests since this patch does not introduce a behavior change.

Canonical link: https://commits.webkit.org/320126@main